test/spec_vectors/simd_int_to_int_extend/fail/module_11.wat
(module (func (result v128) (i64x2.extend_low_i32x4_s (i32.const 0))))